WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
113906
when ARIA button contains a link, label text is ignored (affects main buttons on m.facebook.com)
https://bugs.webkit.org/show_bug.cgi?id=113906
Summary
when ARIA button contains a link, label text is ignored (affects main buttons...
James Craig
Reported
2013-04-03 16:06:38 PDT
Created
attachment 196421
[details]
test case when ARIA button contains a link, label text is ignored (affects main buttons on m.facebook.com) For example, these two buttons have empty AXTitle and AXDescription values. Attached test case. <div role="button"><a href="#">foo</a></div> <button><a href="#">foo</a></button>
Attachments
test case
(89 bytes, text/html)
2013-04-03 16:06 PDT
,
James Craig
no flags
Details
code
(6.15 KB, application/octet-stream)
2013-04-08 09:32 PDT
,
chris fleizach
no flags
Details
patch
(7.89 KB, patch)
2013-04-08 09:51 PDT
,
chris fleizach
thorton
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
James Craig
Comment 1
2013-04-03 16:07:39 PDT
<
rdar://problem/13289394
>
chris fleizach
Comment 2
2013-04-08 09:32:15 PDT
Created
attachment 196864
[details]
code
chris fleizach
Comment 3
2013-04-08 09:51:20 PDT
Created
attachment 196866
[details]
patch
chris fleizach
Comment 4
2013-04-08 09:51:41 PDT
Adding Tim to help with review
Tim Horton
Comment 5
2013-04-10 12:51:08 PDT
Comment on
attachment 196866
[details]
patch View in context:
https://bugs.webkit.org/attachment.cgi?id=196866&action=review
> Source/WebCore/accessibility/AccessibilityObject.h:674 > + virtual bool isDescendantOfBarrenParent() const { return false; }
This is a bizarre name but it was already in the tree...
chris fleizach
Comment 6
2013-04-10 13:44:47 PDT
http://trac.webkit.org/changeset/148136
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug