when ARIA button contains a link, label text is ignored (affects main buttons on m.facebook.com) https://bugs.webkit.org/show_bug.cgi?id=113906

Reviewed by Tim Horton.

Source/WebCore:

If an element does not expose any children, then it's safe to include all of its sub children when determining
the visible text.
The bug is that all elements were ignoring focusable elements (like <a>) when determining visible children text

Test: accessibility/link-inside-button-accessible-text.html

* accessibility/AccessibilityNodeObject.cpp:
(WebCore::shouldUseAccessiblityObjectInnerText):
* accessibility/AccessibilityNodeObject.h:
(AccessibilityNodeObject):
* accessibility/AccessibilityObject.h:
(WebCore::AccessibilityObject::isDescendantOfBarrenParent):
(AccessibilityObject):

LayoutTests:

The static-text-role-uses-text-under-element.html relies on similar logic to this bug.

I realized that it was verifying the wrong thing and if we had looked closely at this layout test
we would have caught this regression earlier most likely.

* accessibility/link-inside-button-accessible-text-expected.txt: Added.
* accessibility/link-inside-button-accessible-text.html: Added.
* platform/mac/accessibility/static-text-role-uses-text-under-element-expected.txt:
* platform/mac/accessibility/static-text-role-uses-text-under-element.html:



Canonical link: https://commits.webkit.org/132753@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@148136 268f45cc-cd09-0410-ab3c-d52691b4dbfc